--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-OAUTH_TOKEN_ARG = "y0_AgAAAAB0It5oAAvg-QAAAAEGMWr8AAC"
-ORGANIZATION_ID_ARG = 0000000
+OAUTH_TOKEN_ARG = "y0_AgAAAAB0It5oAAvg-QAAAAEGMWr8AAC_-"
+ORGANIZATION_ID_ARG = 0000
+APPLICATION_CLIENT_ID_ARG = ""
+APPLICATION_CLIENT_SECRET_ARG = ""
 
 OUTPUT_FILE_NAME = "mail_audit.csv"
 
